--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -10,17 +10,49 @@
   top: 30%;
   left: 25%;
   width: 50%;
-  transition: all 300ms ease-out;
+  /* transition: all 300ms ease-out; */
 }
 
 .ModalOpen {
   /* display: block; */
-  opacity: 1;
-  transform: translateY(0);
+  /* opacity: 1; */
+  /* transform: translateY(0); */
+  animation: openModal 0.4s ease-out forwards;
 }
 
 .ModalClosed {
   /* display: none; */
-  opacity: 0;
-  transform: translateY(-100vh);
+  /* opacity: 0; */
+  /* transform: translateY(-100vh); */
+  animation: closeModal 0.4s ease-out forwards;
+}
+
+@keyframes openModal {
+  0% {
+    opacity: 0;
+    transform: translateY(-100vh);
+  }
+  50% {
+    opacity: 0.7;
+    transform: translateY(-60vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes closeModal {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0.7;
+    transform: translateY(-60vh);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100vh);
+  }
 }
